<resources>
    <string name="app_name">GConnect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="login_text">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_individual">Individual</string>
    <string name="new_company">Organisation</string>
    <string name="join_button">Join Us</string>
    <string name="text_individual">Login as Individual</string>
    <string name="user_id">Username</string>
    <string name="company_name">Company Name</string>
    <string name="text_Organisation">Login as Organisation</string>
    <string name="join_us">Do not have an account? <b>Join Us</b></string>
    <string name="forgot">Forgot password?</string>
    <string name="title_activity_user_main_page">UserMainPageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gconnect</string>
    <string name="nav_header_subtitle">Gconnectsupport@gconnect.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="fname_hint">Enter Full Name</string>
    <string name="education_hint">Add Your Latest Education</string>
    <string name="age_hint">Enter Your Age</string>
    <string name="address_hint">Add Address</string>
    <string name="contact_hint">Contact</string>
    <string name="Skills_hint">Add Skills</string>
    <string name="save_canges">Save Changes</string>
    <string name="logout">Logout</string>
    <string name="headline">Headline</string>

    <string name="menu_Home">Home</string>
    <string name="menu_EditProfile">Edit Profile</string>
    <string name="menu_MyProfile">My Profile</string>
    <string name="menu_list">List Of Users</string>
    <string name="menu_jobs">Jobs</string>
    <string name="menu_posts">Posts</string>
    <string name="menu_logout">LogOut</string>
    <string name="menu_homepage">Home</string>
    <string name="title_activity_organization_main_page">OrganizationMainPageActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="job_title">Job Title</string>
    <string name="job_desc">Job Description</string>
    <string name="job_loca">Location</string>
    <string name="job_vaca">Vacancy</string>
    <string name="add_job_button">Add Job</string>
    <string name="add_post_image_button">Add Image And Description</string>
    <string name="add_desc_hint">Add Description</string>
    <string name="mssg_send_button">Send</string>
    <string name="edit_org_headline">"Headline "</string>
    <string name="edit_org_name">Organization Name</string>
    <string name="edit_org_email">Organization Email</string>
    <string name="edit_org_address">Organization Address</string>
    <string name="edit_org_saveButton">Save Changes</string>
    <string name="act_register_title">Organization</string>
    <string name="act_register_alrAccount">Already have an account ?  Login</string>
    <string name="conn_users_fName">Full Name</string>
    <string name="conn_users_uName">Username</string>
    <string name="conn_users_email">Email</string>
    <string name="conn_users_age">Age</string>
    <string name="conn_users_skills">Skills</string>
    <string name="conn_users_qualification">Highest Qualification</string>
    <string name="conn_users_address">Address</string>
    <string name="conn_users_contact">Contact</string>
    <string name="chat_list_item1">TextView</string>
    <string name="conn_users_item1">TextView</string>
    <string name="my_profile_fName">Full Name</string>
    <string name="my_profile_uName">Username</string>
    <string name="my_profile_email">Email</string>
    <string name="my_profile_age">Age</string>
    <string name="my_profile_qualification">Highest Qualification</string>
    <string name="my_profile_skills">Skills</string>
    <string name="my_profile_address">Address</string>
    <string name="my_profile_contact">Contact</string>
    <string name="org_profile_name">Organization Name</string>
    <string name="org_profile_address">Organization Address</string>
    <string name="org_profile_email">Organization Email</string>
    <string name="register_org_title">Create Organization Account</string>
    <string name="register_org_hint_Name">Enter Organization Name</string>
    <string name="register_org_hint_email">Email</string>
    <string name="register_org_hint_password">Password</string>
    <string name="register_org_signupButton">Sign Up</string>
    <string name="register_user_title">Create User Account</string>
    <string name="register_user_hint_Name">Enter Full Name</string>
    <string name="register_user_hint_email">Email</string>
    <string name="register_user_hint_password">Password</string>
    <string name="register_user_signupButton">Sign Up</string>
    <string name="frag_user_post_title">Your Posts</string>
    <string name="job_list_title">New Jobs Posted</string>
    <string name="notification_item_message">Message</string>
    <string name="notification_item_rejectButton">Reject</string>
    <string name="notification_item_acceptButton">Accept</string>
    <string name="user_list_fName">Full Name</string>
    <string name="user_list_textView">TextView</string>
    <string name="user_list_connect_button">Connect</string>
    <string name="user_post_list_desc">Description</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_conn">Connections</string>
    <string name="conn_search_title">Search</string>
    <string name="org_main_page_logout">Logout</string>
    <string name="org_main_page_addjobs">Add Jobs</string>
    <string name="job_list_applyButton">Apply</string>
    <string name="job_list_compName">Company Name :</string>
    <string name="job_list_jobTitle">Job Titile :</string>
    <string name="job_list_jobdesc">Job Description</string>
    <string name="job_list_location">Location :</string>
    <string name="job_list_vacancy">Vacancy :</string>
    <string name="job_post_delete">Delete</string>

</resources>