<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:background="#D7DD96"
    android:padding="5dp"
    app:cardCornerRadius="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/extra_background_test">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/job_list_title"
            android:textColor="#DD0A0A"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/company_nameT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/company_name"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/job_titleT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/job_title"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/company_nameT"
            app:layout_constraintTop_toBottomOf="@+id/company_nameT" />

        <TextView
            android:id="@+id/job_descriptionT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/job_desc"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="@+id/job_titleT"
            app:layout_constraintTop_toBottomOf="@+id/job_titleT" />

        <TextView
            android:id="@+id/locationT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/job_loca"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="@+id/job_descriptionT"
            app:layout_constraintTop_toBottomOf="@+id/job_descriptionT" />

        <TextView
            android:id="@+id/vacancyT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/job_vaca"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="@+id/locationT"
            app:layout_constraintTop_toBottomOf="@+id/locationT" />

        <Button
            android:id="@+id/applyB"
            android:layout_width="91dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#101010"
            android:text="@string/job_list_applyButton"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.532"
            app:layout_constraintStart_toEndOf="@+id/deleteB"
            app:layout_constraintTop_toBottomOf="@+id/vacancyT"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/deleteB"
            android:layout_width="91dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#101010"
            android:text="@string/job_post_delete"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.193"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vacancyT"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/job_list_compName"
            app:layout_constraintBottom_toBottomOf="@+id/company_nameT"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/company_nameT" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_list_jobTitle"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/job_titleT" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_list_jobdesc"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/job_descriptionT" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_list_location"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/locationT" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_list_vacancy"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="@+id/vacancyT" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>